--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "sass": "^1.62.0",
